[info] fixed new problems

--- a/src/i18n/ruTranslations.json
+++ b/src/i18n/ruTranslations.json
@@ -11,7 +11,7 @@
   "Experience the best of both worlds - distributed cloud mining of all cryptocurrencies with the help of artificial intelligence.": "Получите лучшее из двух миров - распределенный облачный майнинг всех криптовалют с помощью исскуственного интелекта.",
   "Your individual mining power bonus will be calculated at the conclusion of the presale.": "Ваш индивидуальный бонус к мощности майнинга будет рассчитан по завершении предварительной продажи.",
   "day": "День",
-  "hrs": "Чрс",
+  "hrs": "Час",
   "mins": "Минуты",
   "sec": "Сек",
   "ETH": "ЭТХ",
@@ -25,17 +25,17 @@
   "Connect wallet": "Подключить кошелек",
   "FEATURED IN:": "ПРЕДСТАВЛЕНО В:",
   "What is": "Что такое ",
-  "FlexiMine provides you with the tools to make your cryptocurrency assets work for you. Our platform offers both staking and mining capabilities in one place, allowing you to increase earnings and enhance your investments. Utilize the power of AI to automatically select the most profitable assets for mining or choose to mine a specific currency manually. Instant access to mining and staking, as well as the ability to withdraw earned funds at any time, makes FlexiMine the perfect choice for those seeking flexibility and efficiency.": "Флекчимайн предоставляет вам инструменты для того, чтобы ваши криптовалютные активы работали на вас. Наша платформа дает возможность стейкинга и майнинга в одном месте, предоставляя вам возможность увеличить доходы и усилить ваши инвестиции. Используйте мощь ИИ для автоматического выбора наиболее прибыльных активов для майнинга или выберите майнинг определенной валюты вручную. Мгновенный доступ к майнингу и стейкингу, а также возможность вывода заработанных средств в любой момент делает FlexiMine идеальным выбором для тех, кто ищет гибкость и эффективность.",
-  "FlexiMine: Mastery of Mining and Staking at Your Command": "Флексимайн: Совершенство Майнинга и Стейкинга под Вашим Командованием  ",
+  "FlexiMine provides you with the tools to make your cryptocurrency assets work for you. Our platform offers both staking and mining capabilities in one place, allowing you to increase earnings and enhance your investments. Utilize the power of AI to automatically select the most profitable assets for mining or choose to mine a specific currency manually. Instant access to mining and staking, as well as the ability to withdraw earned funds at any time, makes FlexiMine the perfect choice for those seeking flexibility and efficiency.": "FlexiMine предоставляет вам инструменты для того, чтобы ваши криптовалютные активы работали на вас. Наша платформа дает возможность стейкинга и майнинга в одном месте, предоставляя вам возможность увеличить доходы и усилить ваши инвестиции. Используйте мощь ИИ для автоматического выбора наиболее прибыльных активов для майнинга или выберите майнинг определенной валюты вручную. Мгновенный доступ к майнингу и стейкингу, а также возможность вывода заработанных средств в любой момент делает FlexiMine идеальным выбором для тех, кто ищет гибкость и эффективность.",
+  "FlexiMine: Mastery of Mining and Staking at Your Command": "FlexiMine: Совершенство Майнинга и Стейкинга под Вашим Командованием  ",
   "How to Start": "Как начать",
   "Your Path to Cryptocurrency Mining and Staking": "Ваш Путь к Майнингу и Стейкингу Криптовалют",
-  "With FlexiMine, starting mining and staking becomes easier than ever. Open the door to the world of crypto mining by making a deposit via MetaMask or Bitcoin, which directly translates into mining activity and staking opportunities.": "С Флексимайн начать майнинг и стейкинг становится проще, чем когда-либо. Откройте дверь в мир криптомайнинга, внеся депозит через MetaMask или Bitcoin, который непосредственно преобразуется в майнинговую активность и возможности стейкинга.",
+  "With FlexiMine, starting mining and staking becomes easier than ever. Open the door to the world of crypto mining by making a deposit via MetaMask or Bitcoin, which directly translates into mining activity and staking opportunities.": "С FlexiMine начать майнинг и стейкинг становится проще, чем когда-либо. Откройте дверь в мир криптомайнинга, внеся депозит через MetaMask или Bitcoin, который непосредственно преобразуется в майнинговую активность и возможности стейкинга.",
   "Choose which cryptocurrency to mine on your own, or use our AI to maximize profits in stablecoins.": "Выбирайте, какую криптовалюту майнить самостоятельно, или воспользуйтесь нашим AI для максимизации прибыли в стейблкоинах.",
-  "FlexiMine gives you unique flexibility in managing your investments, including the complete return of your deposit at your discretion, ensuring the stability of your income and protection of your investments even in volatile market conditions.": "Флексимайн дает вам уникальную гибкость для управления инвестициями, включая полный возврат депозита по вашему желанию, обеспечивая стабильность вашего дохода и защиту вложений даже в условиях волатильности рынка.",
-  "Start active development of FlexiMine's mobile and desktop applications.": "Начало активной разработки мобильного и десктопного приложений Флексимайн.",
+  "FlexiMine gives you unique flexibility in managing your investments, including the complete return of your deposit at your discretion, ensuring the stability of your income and protection of your investments even in volatile market conditions.": "FlexiMine дает вам уникальную гибкость для управления инвестициями, включая полный возврат депозита по вашему желанию, обеспечивая стабильность вашего дохода и защиту вложений даже в условиях волатильности рынка.",
+  "Start active development of FlexiMine's mobile and desktop applications.": "Начало активной разработки мобильного и десктопного приложений FlexiMine.",
   "Launch a comprehensive marketing campaign to increase brand awareness.": "Запуск обширной маркетинговой кампании для повышения узнаваемости бренда",
   "Strengthen and optimize the platform's infrastructure in anticipation of scaling services.": "Укрепление и оптимизация инфраструктуры платформы в преддверии масштабирования услуг",
-  "Official release of FlexiMine's mobile and desktop applications.": "Официальный релиз мобильного и десктопного приложений Флексимайн",
+  "Official release of FlexiMine's mobile and desktop applications.": "Официальный релиз мобильного и десктопного приложений FlexiMine",
   "Completion of the presale phase and opening of the platform for deposits and staking.": "Завершение этапа предпродажи (presale) и открытие платформы для депозитов и стейкинга",
   "Enabling the feature for users to withdraw mined funds.": "Включение функции вывода намайненных средств для пользователей",
   "Implementation of marketing campaigns involving influencers and active promotion on social media.": "Реализация маркетинговых кампаний с участием инфлюенсеров и активное продвижение в социальных сетях.",
@@ -46,7 +46,7 @@
   "Development of partnerships with major cloud mining providers.": "Развитие партнерских отношений с крупными провайдерами облачного майнинга.  ",
   "Strategic partnership with key cryptocurrency exchanges to increase FXM token liquidity.": "Стратегическое партнерство с ключевыми криптовалютными биржами для повышения ликвидности токена FXM",
   "Launch of loyalty programs and referral systems to stimulate community growth.": "Запуск программ лояльности и реферальных систем для стимулирования роста сообщества",
-  "Optimization of staking functionality on the FlexiMine platform.": "Оптимизация функционала стейкинга на платформе Флексимайн",
+  "Optimization of staking functionality on the FlexiMine platform.": "Оптимизация функционала стейкинга на платформе FlexiMine",
   "Improvement of analytics tools for tracking mining and staking results.": "Улучшение инструментов аналитики для отслеживания результатов майнинга и стейкинга",
   "Planning and preparation for the platform's expansion into new markets.": "Планирование и подготовка к экспансии платформы на новые рынки",
   "Implementation of new features and improvements in mobile and desktop applications.": "Расширение географического присутствия платформы на новых рынках",
@@ -56,7 +56,7 @@
   "Launch of new tools for staking a variety of cryptocurrencies.": "Запуск новых инструментов для стейкинга разнообразных криптовалют",
   "Implementation of automatic reinvestment features for mining revenues.": "Реализация функций автоматического реинвестирования доходов от майнинга",
   "Expansion of the network of strategic partnerships to strengthen the platform.": "Расширение сети стратегических партнерств для укрепления",
-  "FlexiMine's tokenomics are designed to ensure long-term sustainability and investment appeal while simultaneously fostering active participation and community support. The token distribution is as follows:": "Флексимайн спроектирована так, чтобы обеспечить долгосрочную устойчивость и инвестиционную привлекательность, одновременно поощряя активное участие и поддержку со стороны сообщества. Ниже представлено распределение токенов:  ",
+  "FlexiMine's tokenomics are designed to ensure long-term sustainability and investment appeal while simultaneously fostering active participation and community support. The token distribution is as follows:": "FlexiMine спроектирована так, чтобы обеспечить долгосрочную устойчивость и инвестиционную привлекательность, одновременно поощряя активное участие и поддержку со стороны сообщества. Ниже представлено распределение токенов:  ",
   "35% (1,400,000,000 tokens) Mining Investments:": "35% (1 400 000 000 токенов) Инвестиции в майнинг:",
   "These funds will be utilized to expand and upgrade FlexiMine's mining capacities, including acquiring new equipment and improving infrastructure.": " Эти средства будут использоваться для расширения и обновления майнинговых мощностей FlexiMine, что включает приобретение нового оборудования и улучшение инфраструктуры.",
   "Conducting educational webinars and master classes for users.": "Проведение образовательных вебинаров и мастер-классов для пользователей",
@@ -77,7 +77,7 @@
   "Reserve Fund": "Резервный фонд",
   "The distribution of FXM tokens reflects FlexiMine's strategy aimed at creating a healthy ecosystem, stimulating growth, and ensuring transparency of operations for all participants. By focusing on both infrastructure development and community interaction, FlexiMine is committed to building a dynamic and thriving platform for cryptocurrency mining.": "Распределение токенов FXM отражает стратегию FlexiMine, направленную на создание здоровой экосистемы, стимулирование роста и обеспечение прозрачности операций для всех участников. Уделяя внимание как развитию инфраструктуры, так и взаимодействию с сообществом, FlexiMine стремится к созданию динамичной и процветающей платформы для майнинга криптовалют.",
   "Team & Advisors": "Команда и консультанты",
-  "See for yourself that FlexiMine is People-centered and Trustworthy.": "Убедитесь сами, что компания Флексимайн ориентирована на людей и заслуживает доверия.",
+  "See for yourself that FlexiMine is People-centered and Trustworthy.": "Убедитесь сами, что компания FlexiMine ориентирована на людей и заслуживает доверия.",
   "Understand how our system works. Transparent and Safe.": "Разберитесь, как работает наша система. Прозрачный и безопасный.",
   "Frequently Asked Questions": "Часто задаваемые вопросы",
   "it's about the people in front and their experience and knowledge": "речь идет о людях впереди, их опыте и знаниях",
@@ -91,7 +91,7 @@
   "Copyright 2023 FlexiMine. All Rights Reserved.": "Copyright 2023 FlexiMine. Все права защищены.",
   "Disclaimer: Cryptocurrency may be unregulated in your jurisdiction. The value of cryptocurrencies may go down as well as up. Profits may be subject to capital gains or other taxes applicable in your jurisdiction.": "Дисклеймер: криптовалюта может быть нерегулируемой в вашей юрисдикции. Стоимость криптовалют может как падать, так и расти. Прибыль может облагаться налогом на прирост капитала или другими налогами, действующими в вашей юрисдикции.",
   "PRIVACY POLICY": "ПОЛИТИКА КОНФЕДЕНЦИАЛЬНОСТИ",
-  "COOKIES": "ФАЙЛФ COOKIES",
+  "COOKIES": "COOKIES",
   "TERMS OF USE": "ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ",
   "What is FlexiMine?": "Что такое FlexiMine?",
   "How can I buy FXM tokens?": "Как мне купить токен FXM?",
